--- a/app/templates/user/_main-left.html
+++ b/app/templates/user/_main-left.html
@@ -7,7 +7,7 @@
     </li>
     <li class="info-item">
     <span>行业：</span>
-    {%if user.profile.profession%}{{user.profile.profession2str().decode("utf-8")}}{%else%}（无）{%endif%}
+    {%if user.profile.profession%}{{user.profile.profession2str()}}{%else%}（无）{%endif%}
     </li>
 </ul>
  
