--- a/app/templates/home/login.html
+++ b/app/templates/home/login.html
@@ -29,7 +29,7 @@
             {%if loop.first%}
             <div class="alert alert-danger alert-dismissible" role="alert">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                {{msg.decode("utf-8")}}
+                {{msg}}
             </div>
             {%endif%}
             {%endfor%}
@@ -43,7 +43,7 @@
                         <input class="block-input {%if form.email.errors%}input-error{%endif%}" type="text" name="email" placeholder="邮箱" {%if form.email.data%}value="{{form.email.data}}"{%endif%}>
                         {%if form.email.errors%}
                         {%for error in form.email.errors%}
-                        <div class="input-error-info">{{error.decode("utf-8")}}</div>
+                        <div class="input-error-info">{{error}}</div>
                         {%endfor%}
                         {%endif%}
                     </div>
@@ -51,7 +51,7 @@
                         <input class="block-input {%if form.password.errors%}input-error{%endif%}" type="password" name="password" placeholder="密码">
                         {%if form.password.errors%}
                         {%for error in form.password.errors%}
-                        <div class="input-error-info">{{error.decode("utf-8")}}</div>
+                        <div class="input-error-info">{{error}}</div>
                         {%endfor%}
                         {%endif%}
                     </div>
