--- a/app/templates/home/password_change.html
+++ b/app/templates/home/password_change.html
@@ -28,7 +28,7 @@
                 <input class="block-input block-input-lg {%if form.password.errors%}input-error{%endif%}" type="password" name="password" autocomplete="off" placeholder="密码">
                 {%if form.password.errors%}
                 {%for error in form.password.errors%}
-                <div class="input-error-info">{{error.decode("utf-8")}}</div>
+                <div class="input-error-info">{{error}}</div>
                 {%endfor%}
                 {%endif%}
                 <div class="security-level security-level-lg">
@@ -39,7 +39,7 @@
                 <input class="block-input block-input-lg {%if form.repeat_password.errors%}input-error{%endif%}" type="password" name="repeat_password" autocomplete="off" placeholder="重复密码">
             </div>
             {%for error in form.repeat_password.errors%}
-            <div class="input-error-info">{{error.decode("utf-8")}}</div>
+            <div class="input-error-info">{{error}}</div>
             {%endfor%}
             <div class="form-group">
                 <button class="block-btn block-btn-lg" type="submit">确定</button>
