--- a/app/templates/home/password_forgot.html
+++ b/app/templates/home/password_forgot.html
@@ -28,7 +28,7 @@
                 <input class="block-input block-input-lg {%if form.email.errors%}input-error{%endif%}" type="text" name="email" placeholder="请输入邮箱">
                 {%if form.email.errors%}
                 {%for error in form.email.errors%}
-                <div class="input-error-info">{{error.decode("utf-8")}}</div>
+                <div class="input-error-info">{{error}}</div>
                 {%endfor%}
                 {%endif%}
             </div>
