--- a/app/templates/home/password_validate.html
+++ b/app/templates/home/password_validate.html
@@ -30,7 +30,7 @@
                 <input class="block-input block-input-lg{%if form.verification_code.errors%}input-error{%endif%}" type="text" name="verification_code" autocomplete="off" placeholder="验证码">
                 <p class="help-block">请找管理员索要验证码</p>
                 {%for error in form.verification_code.errors%}
-                <div class="input-error-info">{{error.decode("utf-8")}}</div>
+                <div class="input-error-info">{{error}}</div>
                 {%endfor%}
             </div>
             <div class="form-group">
