--- a/app/templates/home/register.html
+++ b/app/templates/home/register.html
@@ -29,7 +29,7 @@
                 <input class="block-input block-input-lg {%if form.username.errors%}input-error{%endif%}" type="text" name="username" autocomplete="off" placeholder="全名" {%if form.username.data%}value="{{form.username.data}}"{%endif%}>
                 {%if form.username.errors%}
                 {%for error in form.username.errors%}
-                <div class="input-error-info">{{error.decode("utf-8")}}</div>
+                <div class="input-error-info">{{error}}</div>
                 {%endfor%}
                 {%endif%}
             </div>
@@ -37,7 +37,7 @@
                 <input class="block-input block-input-lg {%if form.email.errors%}input-error{%endif%}" type="text" name="email" autocomplete="off" placeholder="邮箱" {%if form.email.data%}value="{{form.email.data}}"{%endif%}>
                 {%if form.email.errors%}
                 {%for error in form.email.errors%}
-                <div class="input-error-info">{{error.decode("utf-8")}}</div>
+                <div class="input-error-info">{{error}}</div>
                 {%endfor%}
                 {%endif%}
             </div>
@@ -45,7 +45,7 @@
                 <input class="block-input block-input-lg {%if form.password.errors%}input-error{%endif%}" type="password" name="password" autocomplete="off" placeholder="密码">
                 {%if form.password.errors%}
                 {%for error in form.password.errors%}
-                <div class="input-error-info">{{error.decode("utf-8")}}</div>
+                <div class="input-error-info">{{error}}</div>
                 {%endfor%}
                 {%endif%}
                 <div class="security-level security-level-lg">
