--- a/app/templates/setting/password.html
+++ b/app/templates/setting/password.html
@@ -28,7 +28,7 @@
                             {%if loop.first%}
                             <div class="alert alert-success alert-dismissible" role="alert">
                                 <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                {{msg.decode("utf-8")}}
+                                {{msg}}
                             </div>
                             {%endif%}
                             {%endfor%}
@@ -38,7 +38,7 @@
                                 <div class="col-sm-9">
                                     <input type="password" class="form-control {%if form.old_password.errors%}input-error{%endif%}" name="old_password" >
                                     {%for error in form.old_password.errors%}
-                                    <div class="input-error-info">{{error.decode("utf-8")}}</div>
+                                    <div class="input-error-info">{{error}}</div>
                                     {%endfor%}
                                     <a  href="{{url_for("home.password_forgot")}}" style="display:inline-block; margin-top:5px;font-size:13px;">忘记密码?</a>
                                 </div>
@@ -49,7 +49,7 @@
                                 <div class="col-sm-9">
                                     <input type="password" class="form-control {%if form.password.errors%}input-error{%endif%}" name="password">
                                     {%for error in form.password.errors%}
-                                    <div class="input-error-info">{{error.decode("utf-8")}}</div>
+                                    <div class="input-error-info">{{error}}</div>
                                     {%endfor%}
                                 </div>
                             </div>
@@ -58,7 +58,7 @@
                                 <div class="col-sm-9">
                                     <input type="password" class="form-control {%if form.repeat_password.errors%}input-error{%endif%}" name="repeat_password">
                                     {%for error in form.repeat_password.errors%}
-                                    <div class="input-error-info">{{error.decode("utf-8")}}</div>
+                                    <div class="input-error-info">{{error}}</div>
                                     {%endfor%}
                                 </div>
                             </div>
